--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="box outer red-border" id="qa-block">
-    <div class="box center red-border">
-      <div class="box inside red-border">
+  <div class="outer red-border" id="qa-block">
+    <div class="center red-border">
+      <div class="inside red-border">
         In programming languages, a closure is a technique for implementing lexically
         scoped name binding in a language with first-class functions. Operationally, a
         closure is a record storing a function together with an environment.
       </div>
     </div>
   </div>
-  <div class="box outer red-border">
-    <div class="box center red-border">
-      <div class="box inside red-border">
+  <div class="outer red-border">
+    <div class="center red-border">
+      <div class="inside red-border">
         У програмуванні замиканням називають підпрограму, що виконується в середовищі,
         яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих
         змінних під час виконання.
       </div>
     </div>
   </div>
-  <div class="box outer red-border">
-    <div class="box center red-border">
-      <div class="box inside red-border">
+  <div class="outer red-border">
+    <div class="center red-border">
+      <div class="inside red-border">
         Замыкание в программировании — функция первого класса, в теле которой
         присутствуют ссылки на переменные, объявленные вне тела этой функции в
         окружающем коде и не являющиеся её параметрами.
